// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new request body has correct commands 1`] = `
Object {
  "commands": Array [],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "7cd233ea671911f3",
      "getJsonBodyToPreview": [Function],
      "location": DiffLocation {
        "descriptor": Object {
          "contentType": "application/json",
          "type": "path_request",
        },
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "request observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "assertion": Array [],
        "interactionPointers": Array [
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "application/json Request",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "Request",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`new response body has correct commands 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6681",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$boolean",
        "name": "",
        "shapeId": "shape_6682",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6683",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_6684",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$object",
        "name": "",
        "shapeId": "shape_6690",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$optional",
        "name": "",
        "shapeId": "shape_6686",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$optionalInner",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6684",
              },
            },
            "shapeId": "shape_6686",
          },
        },
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6685",
        "name": "dueDate",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6685",
            "shapeId": "shape_6686",
          },
        },
        "shapeId": "shape_6690",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6687",
        "name": "id",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6687",
            "shapeId": "shape_6683",
          },
        },
        "shapeId": "shape_6690",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6688",
        "name": "isDone",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6688",
            "shapeId": "shape_6682",
          },
        },
        "shapeId": "shape_6690",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_6689",
        "name": "task",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_6689",
            "shapeId": "shape_6681",
          },
        },
        "shapeId": "shape_6690",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$list",
        "name": "",
        "shapeId": "shape_6691",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$listItem",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "shape_6690",
              },
            },
            "shapeId": "shape_6691",
          },
        },
      },
    },
    Object {
      "AddResponseByPathAndMethod": Object {
        "httpMethod": "GET",
        "httpStatusCode": 200,
        "pathId": "path_it2OyjUysW",
        "responseId": "response_6692",
      },
    },
    Object {
      "SetResponseBodyShape": Object {
        "bodyDescriptor": Object {
          "httpContentType": "application/json",
          "isRemoved": false,
          "shapeId": "shape_6691",
        },
        "responseId": "response_6692",
      },
    },
  ],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "8e2f42b9dd555282",
      "getJsonBodyToPreview": [Function],
      "location": DiffLocation {
        "descriptor": Object {
          "contentType": "application/json",
          "statusCode": 200,
          "type": "path_response",
        },
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "response with",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "assertion": Array [],
        "interactionPointers": Array [
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
          "8eff95b1-4f6d-4d3c-ba71-5e37923780ce4",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "200 application/json Response",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "Response",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`spec with paths, and new bodies 1`] = `Array []`;
